deploy/k8s/base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-f
  labels:
    app.kubernetes.io/name: project-f
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: project-f
